# pycifrw

./: .gitignore  .hgignore  BUILDING  CONTRIBUTORS  CifFile.html  CifFile.nw  CifFile.py  FILES  INSTALLATION  LICENSE  MANIFEST.in  Makefile  ParserErrors.py  README  README.md  README.rst  RELEASENOTES  Readme  StarFile.nw  TESTING  TestDrel.py  TestPyCIFRW.py  TestPyCifRW.py  YappsCifParser.nw  YappsStarParser.nw  __init__.py  check_manylinux_package.py  com_val.dic  documentation.html  documentation.lyx  drel.py  drel_lex.py  drel_yacc.py  kjCParseBuild.py  kjCParser.py  kwCifParse.html  kwCifParse.nw  kwCifParse.py  setup.cfg  setup.py  (+5 more)
Programs/: Web.README  process-validate.py  validate_cif.py
dictionaries/: cif_core_ddlm.dic  cif_nested.dic  cvdica.dic  cvdicb.dic  ddl.dic  dict_C  novel.dic  novel_test.cif  templ_enum.cif
docs/: Makefile  dict_use.txt  documentation.txt~  drel_use.txt  overview.txt  pdoc-local
lib/: Makefile  lex.yy.c  old_pattern  py_star_scan.c  star.l  star.y  star_flex.h  star_scanner.h  test
pycifrw/: CifFile.nw  INSTALLATION  LICENSE  Makefile  README  RELEASENOTES  StarFile.nw  TestDrel.py  TestPyCifRW.py  TypeContentsParser.nw  YappsStarParser.nw  __init__.py  dic_for_tests.dic  documentation.lyx  setup.py  testfile  yapps3_compiled_rt.py
src/: CifFile.nw  CifFile_module.nw  CifFile_module.py  Makefile  StarFile.nw  StarFile.py  YappsStarParser.nw  YappsStarParser_2_0.py  YappsStarParser_STAR2.py  __init__.py  yapps3_compiled_rt.py
src2/: CifFile.nw  Makefile  StarFile.nw  TypeContentsParser.nw  YappsStarParser.nw  (+1 more)
(+156 files in other folders)
