[metadata]
name = PyCifRW
version = 4.4.6
author = James Hester
author_email = jamesrhester@gmail.com
url = https://github.com/jamesrhester/pycifrw/blob/development/README.md
license = Python 2.0
description = "CIF, mmCIF, and STAR file support for Python"
long_description = file: README.md, LICENSE
classifiers =
          Development Status :: 5 - Production/Stable
          Environment :: Console
          Intended Audience :: Developers
          Intended Audience :: Science/Research
          License :: OSI Approved :: Python Software Foundation License
          Operating System :: OS Independent
          Programming Language :: Python :: 3
          Programming Language :: Python :: 2
          Topic :: Scientific/Engineering :: Bio-Informatics
          Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
  =src
packages=find:
py_modules = CifFile.CifFile_module , CifFile.yapps3_compiled_rt , CifFile.YappsStarParser_1_1 , CifFile.YappsStarParser_1_0 , CifFile.YappsStarParser_STAR2, CifFile.YappsStarParser_2_0, CifFile.StarFile, CifFile.TypeContentsParser
install_requires =
    ply
    numpy

[options.packages.find]
where=src

